Final fix: Switch to Google Embeddings and correct data

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+# flask
+# gunicorn
+# langchain
+# langchain-google-genai
+# langchain-pinecone
+# pinecone-client
+# beautifulsoup4
+# requests
+# python-dotenv
+# sentence-transformers
+# langchain-community
 flask
 gunicorn
 langchain
@@ -7,5 +18,4 @@ pinecone-client
 beautifulsoup4
 requests
 python-dotenv
-sentence-transformers
 langchain-community
